	     the mathtext parser for layout.

	   - Sub/superscripts are less likely to accidentally overlap.

	   - Support for sub/superscripts in either order, eg. $x^i_j$
             and $x_j^i$ are equivalent.

	   - Double sub/superscripts (eg. $x_i_j$) are considered
             ambiguous and raise an exception.  Use braces to disambiguate.

	   - $\frac{x}{y}$ can be used for displaying fractions

	   - $\left(\frac{x}{y}\right)$ may be used to create
             parentheses and other delimiters that automatically
             resize to the height of their contents.

	   - Spacing around operators etc. is now generally more like
             TeX.

 	   - Added support (and fonts) for boldface (\bf) and
             sans-serif (\sf) symbols.

	   - Log-like function name shortcuts are supported.  For
             example, $\sin(x)$ may be used instead of ${\rm sin}(x)$

	   - Limited use of kerning for the easy case (same font)

	   Behind the scenes, the pyparsing.py module used for doing
	   the math parsing was updated to the latest stable version
	   (1.4.6).  A lot of duplicate code was refactored out of the
	   Font classes.

	   - MGD

2007-07-19 completed numpification of most trivial cases - NN

2007-07-19 converted non-numpy relicts troughout the code - NN

2007-07-19 replaced the Python code in numerix/ by a minimal wrapper around
           numpy that explicitly mentions all symbols that need to be
	   addressed for further numpification - NN

2007-07-18 make usetex respect changes to rcParams. texmanager used to 
           only configure itself when it was created, now it 
           reconfigures when rcParams are changed. Thank you Alexander 
           Schmolck for contributing a patch - DSD

2007-07-17 added validation to setting and changing rcParams - DSD

2007-07-17 bugfix segfault in transforms module. Thanks Ben North for
           the patch. - ADS

2007-07-16 clean up some code in ticker.ScalarFormatter, use unicode to